Finish Static pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+<h1>帮助</h1>
+<p>
+  更多相关 Ruby on Rails 帮助，请莅临
+  <a href="http://ruby-china.org">Ruby-china</a>.
+  本示例教程教学文章：
+  <a href="http://ruby-china.org/topics/3239">1000 小时学会 Rails 系列</a>.
+</p>
