--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+<h1>新微博</h1>
+<p>
+  神秘的X项目<a href="http://ruby-china.org/topics/3239">新微博</a> Rails 示例教学
+</p>
+
